# polymarket-bot-sandbox

./: .env.example  .gitignore  KDJRange.py  README.md  SANITIZED_EXPORT_MANIFEST.md  UPLOAD_CHECKLIST.md  package-lock.json  package.json  requirements-freqai.txt  requirements.txt  requirements_backtest.txt  tsconfig.json
polyfun-next/: README.md  pyproject.toml
polyfun-next/config/: arb.canary.example.json  canary.eth15m.example.json
polyfun-next/docs/: V2_COMPLIANCE.md
polyfun-next/scripts/: analyze_top159_high_price_winrate.py  collect_top159_official_orderbook_dryrun.py  export_eth15m_5y_candidate_stream.py  generate_top159_live_candidate.py  preflight_v2.py  run_arb_canary_execute.py  run_arb_canary_scan.py  run_arb_canary_supervisor.py  run_btc061_method_search.py  run_btc_near061_multiroute_search.py  run_canary_once.py  run_crypto_raw_growth_multimarket_search.py  run_entry_fill_quality_model.py  run_eth15m_high_price_055_model_search.py  run_eth15m_high_price_065_model_search.py  run_eth15m_model_bank_router_search.py  run_eth15m_next10_strategy_search.py  run_eth15m_online_expert_router_search.py  run_eth15m_online_expert_router_v2_anchor_search.py  run_eth15m_orderflow_metalabel_search.py  run_eth15m_sequence_shape_055_model_search.py  run_eth_delayed_entry_search.py  run_eth_regime_expert_mainmodel_search.py  run_event_market_shadow_scan.py  run_event_sports_epl_calibrated_backtest.py  run_event_sports_fair_value_shadow.py  run_fair_execution_compare.py  run_forced_exit_research.py  run_forced_exit_stop30_50_research.py  run_realistic_backtest.py  (+44 more)
(+405 files in other folders)
