[project]
name = "polyfun-next"
version = "0.1.0"
description = "Execution-first Polymarket canary trading system"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "websockets>=14.0",
  "python-socks[asyncio]>=2.4",
]

[project.optional-dependencies]
live = [
  "py-clob-client-v2>=0.0.1",
  "requests>=2.31",
  "websockets>=14.0",
  "python-socks[asyncio]>=2.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
